@@ -381,6 +381,14 @@ name|long
 name|timems
 parameter_list|)
 block|{
+assert|assert
+name|ctr
+operator|.
+name|get
+argument_list|()
+operator|==
+name|oldval
+assert|;
 name|long
 name|curt
 init|=
@@ -454,6 +462,21 @@ block|}
 block|}
 name|assertTrue
 argument_list|(
+literal|"ctr="
+operator|+
+name|ctr
+operator|.
+name|get
+argument_list|()
+operator|+
+literal|", oldval="
+operator|+
+name|oldval
+operator|+
+literal|", newval="
+operator|+
+name|newval
+argument_list|,
 literal|false
 argument_list|)
 expr_stmt|;
@@ -487,10 +510,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-name|slw
-operator|=
-literal|null
-expr_stmt|;
 name|TEST_UTIL
 operator|.
 name|startMiniZKCluster
@@ -613,46 +632,6 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
-if|if
-condition|(
-name|slw
-operator|!=
-literal|null
-condition|)
-block|{
-name|slw
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
-name|slw
-operator|.
-name|worker
-operator|.
-name|join
-argument_list|(
-literal|3000
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|slw
-operator|.
-name|worker
-operator|.
-name|isAlive
-argument_list|()
-condition|)
-block|{
-name|assertTrue
-argument_list|(
-literal|"could not stop the worker thread"
-operator|==
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 name|TEST_UTIL
 operator|.
 name|shutdownMiniZKCluster
@@ -779,8 +758,9 @@ operator|.
 name|PERSISTENT
 argument_list|)
 expr_stmt|;
+name|SplitLogWorker
 name|slw
-operator|=
+init|=
 operator|new
 name|SplitLogWorker
 argument_list|(
@@ -795,12 +775,14 @@ literal|"rs"
 argument_list|,
 name|neverEndingTask
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|slw
 operator|.
 name|start
 argument_list|()
 expr_stmt|;
+try|try
+block|{
 name|waitForCounter
 argument_list|(
 name|tot_wkr_task_acquired
@@ -840,6 +822,71 @@ literal|"rs"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|stopSplitLogWorker
+argument_list|(
+name|slw
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+specifier|private
+name|void
+name|stopSplitLogWorker
+parameter_list|(
+specifier|final
+name|SplitLogWorker
+name|slw
+parameter_list|)
+throws|throws
+name|InterruptedException
+block|{
+if|if
+condition|(
+name|slw
+operator|!=
+literal|null
+condition|)
+block|{
+name|slw
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+name|slw
+operator|.
+name|worker
+operator|.
+name|join
+argument_list|(
+literal|3000
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|slw
+operator|.
+name|worker
+operator|.
+name|isAlive
+argument_list|()
+condition|)
+block|{
+name|assertTrue
+argument_list|(
+operator|(
+literal|"Could not stop the worker thread slw="
+operator|+
+name|slw
+operator|)
+operator|==
+literal|null
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 annotation|@
 name|Test
@@ -1012,29 +1059,15 @@ literal|"svr2"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|stopSplitLogWorker
+argument_list|(
 name|slw1
-operator|.
-name|stop
-argument_list|()
+argument_list|)
 expr_stmt|;
+name|stopSplitLogWorker
+argument_list|(
 name|slw2
-operator|.
-name|stop
-argument_list|()
-expr_stmt|;
-name|slw1
-operator|.
-name|worker
-operator|.
-name|join
-argument_list|()
-expr_stmt|;
-name|slw2
-operator|.
-name|worker
-operator|.
-name|join
-argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 annotation|@
@@ -1053,8 +1086,9 @@ argument_list|(
 literal|"testPreemptTask"
 argument_list|)
 expr_stmt|;
+name|SplitLogWorker
 name|slw
-operator|=
+init|=
 operator|new
 name|SplitLogWorker
 argument_list|(
@@ -1069,12 +1103,14 @@ literal|"tpt_svr"
 argument_list|,
 name|neverEndingTask
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|slw
 operator|.
 name|start
 argument_list|()
 expr_stmt|;
+try|try
+block|{
 name|Thread
 operator|.
 name|yield
@@ -1208,6 +1244,15 @@ literal|1000
 argument_list|)
 expr_stmt|;
 block|}
+finally|finally
+block|{
+name|stopSplitLogWorker
+argument_list|(
+name|slw
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 annotation|@
 name|Test
 specifier|public
@@ -1224,8 +1269,9 @@ argument_list|(
 literal|"testMultipleTasks"
 argument_list|)
 expr_stmt|;
+name|SplitLogWorker
 name|slw
-operator|=
+init|=
 operator|new
 name|SplitLogWorker
 argument_list|(
@@ -1240,12 +1286,14 @@ literal|"tmt_svr"
 argument_list|,
 name|neverEndingTask
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 name|slw
 operator|.
 name|start
 argument_list|()
 expr_stmt|;
+try|try
+block|{
 name|Thread
 operator|.
 name|yield
@@ -1425,6 +1473,15 @@ literal|"tmt_svr"
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|stopSplitLogWorker
+argument_list|(
+name|slw
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
