@@ -84,6 +84,8 @@ Release 0.91.0 - Unreleased
    HBASE-3800  HMaster is not able to start due to AlreadyCreatedException
    HBASE-3806  distributed log splitting double escapes task names
                (Prakash Khemani)
+   HBASE-3819  TestSplitLogWorker has too many SLWs running -- makes for
+               contention and occasional failures
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
